# hailo-llm-deploy

./: .gitignore  CLAUDE.md  LICENCE.md  README.md  env_legal.yml  pyproject.toml
configs/: default.yaml
configs/examples/: korean_legal.yaml
data/processed/: test_dataset.jsonl  val_dataset.jsonl
data/processed/metadata/: reference_extraction.json  sampling_stats.json
docs/: hailo-lora-guide.md
examples/korean-legal/: chunker.py  collector.py  config.py  construct.py  convert_formal.py  extractor.py  raft_builder.py  sampler.py
examples/korean-legal/legacy/: construct_trial1.py  train_stage1.py
examples/korean-legal/results/: eval_trial2.1.json
hailo_llm_deploy/: __init__.py  cli.py  compile.py  config.py  evaluate.py  export.py  finetune.py
results/: eval_trial1.json  eval_trial1_details.jsonl  eval_trial2.1_details.jsonl  eval_trial2.json  eval_trial2_details.jsonl
src/: chunker.py  collector.py  config.py  construct_trial2.py  convert_formal.py  evaluate_trial2.py  export_onnx.py  extractor.py  raft_builder.py  sampler.py  train_stage1.py  train_trial2.py
tests/: conftest.py  test_cli.py  test_compile.py  test_config.py  test_evaluate.py  test_export.py  test_finetune.py
